# jukeboxsvc

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  patch_docker_services.diff  pyproject.toml
.devcontainer/: .env  devcontainer.json  post-create.sh
.devcontainer/vscode/: launch.json
.github/: settings.yml
jukeboxsvc/: __init__.py
jukeboxsvc/api/: __init__.py  cluster.py  container.py  ovh_cluster.py
jukeboxsvc/biz/: cluster.py  cluster_scaler.py  container.py  errors.py  jukebox.py  log.py  misc.py  models.py  node.py  ovh_cluster.py  ovh_defs.py  ovh_utils.py  sqldb.py  thread_tracer.py
jukeboxsvc/dto/: cluster.py  container.py  ovh_cluster.py
jukeboxsvc/services/: ovh_client.py  sessionsvc.py
jukeboxsvc/services/dto/: sessionsvc.py
runtime/conf/: gunicorn.config.py
tests/: pytest.env  requests.http  test_jukebox.py
